[tool.poetry]
name = "subclean"
version = "0.5.0"
description = "Simple CLI tool to instantly enhance your movie & TV show subtitles."
authors = ["disrupted <hi@salomonpopp.me>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/disrupted/subclean"
repository = "https://github.com/disrupted/subclean"
keywords = ["subtitle", "cli", "media", "plex"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Environment :: Console",
]
include = [
  "LICENSE",
]

[tool.poetry.urls]
"Issues" = "https://github.com/disrupted/subclean/issues"

[tool.poetry.scripts]
subclean = "subclean.subclean:main"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
black = "^22.10"
pre-commit = ">=2.20,<4.0"
mypy = "^0.982"
isort = "^5.10.1"
autoflake = "^1.7.6"

[tool.pyright]
include = ["subclean", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
